--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,9 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
     "modernizr": "~2.8.1",
-    "holderjs": "~2.7.1"
+    "holderjs": "~2.7.1",
+    "masonry": "~3.3.0",
+    "magnific-popup": "~1.0.0",
+    "imagesloaded": "~3.1.8"
   }
 }
