--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "description": "personal page",
+  "moduleType": [],
+  "private": true
 }
