--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "browser-sync": "^2.9.1",
     "fs": "0.0.2",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.2",
     "gulp-bower": "0.0.10",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
