landing page and graphics

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -89,7 +89,7 @@
 #     leading_underscore: false
 #     filename_extension: false
 
-#   Indentation:
+  Indentation:
 #     enabled: true
 #     allow_non_nested_indentation: false
     character: tab # or 'space'
