--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "fullpage.js": "^2.8.2",
     "jquery": "~1.11.3",
     "jquery-selectorator": "^0.1.6",
     "meteor-node-stubs": "~0.2.0"
